--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <div class="container">
     <!-- Welcome -->
-    <div class="jumbotron " id="welcome">
+    <div class="jumbotron" id="welcome">
       <h1>Welcome to SmartForm!</h1>
       <p>Front-end Technology Survey</p>
-      <p><button id="start" class="btn btn-primary btn-lg">Start Survey</button></p>
+      <p><button class="btn btn-primary btn-lg" id ="start">Start Survey</button></p>
     </div>
     <!-- Welcome END -->
     <!-- Question 1 -->
@@ -27,7 +27,7 @@
           <label for="email">Email address</label>
           <input type="email" class="form-control" id="email" placeholder="Email">
         </div>
-        <button id="next" class="btn btn-success">Next</button>
+        <button class="btn btn-success" id ="q1next">Next</button>
       </div>
     </div>
     <!-- Question 1 END -->
@@ -35,9 +35,9 @@
     <div class="row jumbotron question" id="q2">
       <div class="col-sm-10 q2">
         <h2>Choose a front-end technology</h2>
-        <button class="btn btn-lg btn-warning">HTML</button>
-        <button class="btn btn-lg btn-danger">CSS</button>
-        <button class="btn btn-lg btn-info">JavaScript</button>
+        <button class="btn btn-lg btn-warning" id="html">HTML</button>
+        <button class="btn btn-lg btn-danger" id="css">CSS</button>
+        <button class="btn btn-lg btn-info" id="js">JavaScript</button>
       </div>
     </div>
     <!-- Question 2 END -->
@@ -47,22 +47,22 @@
         <p>What do you <strong>like</strong> about HTML?</p>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Learning the basics is trivial
+          <input name="likesHTML" type="checkbox" value="Learning the basics is trivial"> Learning the basics is trivial
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> No hassle: write code in a text editor and open in Browser
+          <input name="likesHTML" type="checkbox" value="No hassle: write code in a text editor and open in Browser"> No hassle: write code in a text editor and open in Browser
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Tags are easy to remember
+          <input name="likesHTML" type="checkbox" value="No hassle: write code in a text editor and open in Browser"> No hassle: write code in a text editor and open in Browser
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> HTML5 features like canvas are powerful
+          <input name="likesHTML" type="checkbox" value="HTML5 features like canvas are powerful"> HTML5 features like canvas are powerful
         </label>
         </div>
       </div>
@@ -70,27 +70,27 @@
         <p>What do you <strong>dislike</strong> about HTML?</p>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Difficult to learn
+          <input name="dislikesHTML" type="checkbox" value="Difficult to learn"> Difficult to learn
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Having to close tags is annoying!
+          <input name="dislikesHTML" type="checkbox" value="Having to close tags is annoying!"> Having to close tags is annoying!
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Too many tags and attributes to remember
+          <input name="dislikesHTML" type="checkbox" value="Too many tags and attributes to remember"> Too many tags and attributes to remember
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Code looks pretty messy
+          <input name="dislikesHTML" type="checkbox" value="Code looks pretty messy"> Code looks pretty messy
         </label>
         </div>
         <div class="btnRight">
-          <button class="btn btn-primary"><span class="glyphicon glyphicon-chevron-left"></span> Previous</button>
-          <button class="btn btn-success">Next <span class="glyphicon glyphicon-chevron-right"></span></button>
+          <button class="btn btn-primary" id="q2a_p"><span class="glyphicon glyphicon-chevron-left"></span> Previous</button>
+          <button class="btn btn-success" id="q2a_n">Next <span class="glyphicon glyphicon-chevron-right"></span></button>
         </div>
       </div>
     </div>
@@ -101,17 +101,17 @@
         <p>What do you <strong>like</strong> about CSS?</p>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Syntax is easy to learn
+          <input name="likesCSS" type="checkbox" value="Syntax is easy to learn"> Syntax is easy to learn
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Can be used as an art tool
+          <input name="likesCSS" type="checkbox" value="Can be used as an art tool"> Can be used as an art tool
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Enables creativity in web design
+          <input name="likesCSS" type="checkbox" value="Enables creativity in web design"> Enables creativity in web design
         </label>
         </div>
       </div>
@@ -119,27 +119,27 @@
         <p>What do you <strong>dislike</strong> about CSS?</p>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Difficult to learn
+          <input name="dislikesCSS" type="checkbox" value="Difficult to learn"> Difficult to learn
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Debugging is a nightmare
+          <input name="dislikesCSS" type="checkbox" value="Debugging is a nightmare"> Debugging is a nightmare
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Conflicts can be very confusing
+          <input name="dislikesCSS" type="checkbox" value="Conflicts can be very confusing"> Conflicts can be very confusing
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Code is messy
+          <input name="dislikesCSS" type="checkbox" value="Code is messy"> Code is messy
         </label>
         </div>
         <div class="btnRight">
-          <button class="btn btn-primary"><span class="glyphicon glyphicon-chevron-left"></span> Previous</button>
-          <button class="btn btn-success">Next <span class="glyphicon glyphicon-chevron-right"></span></button>
+          <button class="btn btn-primary" id="q2b_p"><span class="glyphicon glyphicon-chevron-left"></span> Previous</button>
+          <button class="btn btn-success" id="q2b_n">Next <span class="glyphicon glyphicon-chevron-right"></span></button>
         </div>
       </div>
     </div>
@@ -150,22 +150,22 @@
         <p>What do you <strong>like</strong> about JavaScript?</p>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Easy to learn
+          <input name="likesJS" type="checkbox" value="Easy to learn"> Easy to learn
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Multple programming styles supported
+          <input name="likesJS" type="checkbox" value="Multple programming styles supported"> Multple programming styles supported
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Just code and run easily in the browser
+          <input name="likesJS" type="checkbox" value="Just code and run easily in the browser"> Just code and run easily in the browser
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Huge growing community and plenty of resources online
+          <input name="likesJS" type="checkbox" value="Huge growing community and plenty of resources online"> Huge growing community and plenty of resources online
         </label>
         </div>
       </div>
@@ -173,27 +173,27 @@
         <p>What do you <strong>dislike</strong> about JavaScript?</p>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Difficult to learn
+          <input name="dislikesJS" type="checkbox" value="Difficult to learn"> Difficult to learn
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Multple programming paradigms supported (too many options)
+          <input name="dislikesJS" type="checkbox" value="Multple programming paradigms supported (too many options)"> Multple programming paradigms supported (too many options)
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> Easy to right messy code
+          <input name="dislikesJS" type="checkbox" value="Easy to right messy code"> Easy to right messy code
         </label>
         </div>
         <div class="checkbox">
           <label>
-          <input name="likesHTML" type="checkbox"> No multi threading
+          <input name="dislikesJS" type="checkbox" value="No multi threading"> No multi threading
         </label>
         </div>
         <div class="btnRight">
-          <button class="btn btn-primary"><span class="glyphicon glyphicon-chevron-left"></span> Previous</button>
-          <button class="btn btn-success">Next <span class="glyphicon glyphicon-chevron-right"></span></button>
+          <button class="btn btn-primary" id="q2c_p"><span class="glyphicon glyphicon-chevron-left"></span> Previous</button>
+          <button class="btn btn-success" id="q2c_n">Next <span class="glyphicon glyphicon-chevron-right"></span></button>
         </div>
       </div>
     </div>
@@ -204,50 +204,50 @@
       <div class="col-sm-4">
         <span>HTML Strength</span>
         <label class="radio">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="Weak"> Weak
+          <input type="radio" name="htmlRadio" id="inlineRadio1" value="Weak"> Weak
         </label>
         <label class="radio">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="Average"> Average
+          <input type="radio" name="htmlRadio" id="inlineRadio2" value="Average"> Average
         </label>
         <label class="radio">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="Good"> Good
+          <input type="radio" name="htmlRadio" id="inlineRadio3" value="Good"> Good
         </label>
         <label class="radio">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="Expert"> Expert
+          <input type="radio" name="htmlRadio" id="inlineRadio3" value="Expert"> Expert
         </label>
       </div>
       <div class="col-sm-4">
         <span>CSS Strength</span>
         <label class="radio">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="Weak"> Weak
+          <input type="radio" name="cssRadio" id="inlineRadio1" value="Weak"> Weak
         </label>
         <label class="radio">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="Average"> Average
+          <input type="radio" name="cssRadio" id="inlineRadio2" value="Average"> Average
         </label>
         <label class="radio">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="Good"> Good
+          <input type="radio" name="cssRadio" id="inlineRadio3" value="Good"> Good
         </label>
         <label class="radio">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="Expert"> Expert
+          <input type="radio" name="cssRadio" id="inlineRadio3" value="Expert"> Expert
         </label>
       </div>
       <div class="col-sm-4">
         <span>JavaScript Strength</span>
         <label class="radio">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="Weak"> Weak
+          <input type="radio" name="jsRadio" id="inlineRadio1" value="Weak"> Weak
         </label>
         <label class="radio">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="Average"> Average
+          <input type="radio" name="jsRadio" id="inlineRadio2" value="Average"> Average
         </label>
         <label class="radio">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="Good"> Good
+          <input type="radio" name="jsRadio" id="inlineRadio3" value="Good"> Good
         </label>
         <label class="radio">
-          <input type="radio" name="inlineRadioOptions" id="inlineRadio3" value="Expert"> Expert
+          <input type="radio" name="jsRadio" id="inlineRadio3" value="Expert"> Expert
         </label>
         <div class="btnRight">
-          <button class="btn btn-primary"><span class="glyphicon glyphicon-chevron-left"></span> Previous</button>
-          <button class="btn btn-success">Next <span class="glyphicon glyphicon-chevron-right"></span></button>
+          <button class="btn btn-primary" id="q3_p"><span class="glyphicon glyphicon-chevron-left"></span> Previous</button>
+          <button class="btn btn-success" id="q3_n">Next <span class="glyphicon glyphicon-chevron-right"></span></button>
         </div>
       </div>
     </div>
@@ -256,13 +256,47 @@
     <div class="jumbotron question" id="thanks">
       <h1>Thank You!</h1>
       <p>Your Front-end Technology Survey answers were submitted successfully.</p>
-      <p><button class="btn btn-default btn-lg">View Answers</button> <button class="btn btn-danger">Delete Answers</button></p>
+      <p><button class="btn btn-default btn-lg" id="view">View Answers</button> <button class="btn btn-danger" id="delete">Delete Answers</button></p>
     </div>
     <!-- Thank you END-->
     <!-- Show answers in new view (div)
     -
     -
     -->
+    <div class="row jumbotron question" id="answers">
+      <div class="col-sm-10 q2">
+        <h2>Here are your answers</h2>
+		
+        <div> <b> Name:</b><span id="viewname"> </span> </div>
+		
+        <div> <b> Email: </b> <span id="viewemail"> </span> </div> <br />
+		
+        <div> <b> What to do you like about HTML? </b> <span id="htmllikes"> </span> </div> <br />
+		
+        <div> <b> What to do you dislike about HTML? </b> <span id="htmldislikes"> </span> </div> <br />
+		
+        <div> <b> What to do you like about CSS? </b> <span id="csslikes"> </span> </div> <br />
+		
+        <div> <b> What to do you dislike about CSS? </b> <span id="cssdislikes"> </span> </div> <br />
+		
+        <div> <b> What to do you like about JavaScript? </b> <span id="jslikes"> </span> </div> <br />
+		
+        <div> <b> What to do you dislike about JavaScript? </b> <span id="jsdislikes"> </span> </div> <br />
+		
+        <div> <b> Estimate your front-end skills </b> </div>
+		
+        <div> HTML Strength: <span id="htmlstrength"> </span> </div>
+		
+        <div> CSS Strength: <span id="cssstrength"> </span> </div>
+		
+        <div> JavaScript Strength: <span id="jsstrength"> </span> </div>
+		
+      </div>
+
+    </div>
+
+
+
   </div>
 
   <script type="text/javascript" src="vendor/jquery-3.1.1.min.js"></script>
